Fix topnav causing page shifts when dropdown is open. Improve readability of topnav in mobile view

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -94,6 +94,7 @@ body {
   line-height: 24px;
   font-weight: normal;
   overflow-x: hidden;
+  overflow-y: auto;
   overscroll-behavior: none;
   background-image: url('/img/stars.jpg');
   background-repeat: repeat;
